--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -4,18 +4,45 @@
 <ul class="list-group list-group-flush" id="ticket">
   {% for ticket in user.tickets %}
   <li class="list-group-item">
-    Name: <cite contenteditable="true">{{ ticket.name }} </cite><br />
-    Data: <cite contenteditable="true"> {{ticket.data}} </cite><br />
+    Name:
+    <cite id="editableContent{{ ticket.id }}" contenteditable="true"
+      >{{ ticket.name }} </cite
+    ><br />
+    Data:
+    <cite id="editableContent{{ ticket.id }}2" contenteditable="true">
+      {{ticket.data}} </cite
+    ><br />
     Progress Type: {{ticket.progressType}}
     <br />
 
-    <button
+    <script>
+      document
+        .getElementById("editableContent{{ ticket.id }}")
+        .addEventListener("blur", function () {
+          const content = this.innerText;
+          console.log(content);
+          updateTicketName({{ ticket.id }},content)
+
+        });
+
+
+        document
+        .getElementById("editableContent{{ ticket.id }}2")
+        .addEventListener("blur", function () {
+          const content2 = this.innerText;
+          console.log(content2);
+          updateTicketData({{ ticket.id }},content2)
+
+        });
+    </script>
+
+    <!-- <button
       type="button"
       class="btn btn-primary"
       onClick="updateTicket({{ ticket.id}} , '{{ticket.name}}', '{{ticket.data}}')"
     >
       Update2 Ticket
-    </button>
+    </button> -->
     <button type="button" class="close" onClick="deleteTicket({{ ticket.id }})">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -46,4 +73,33 @@
     <button type="submit" class="btn btn-primary">Add Ticket</button>
   </div>
 </form>
+
+<script>
+  function updateTicketName(ticketId, ticketName) {
+    console.log("Test - index json - update");
+    fetch("/update-ticket", {
+      method: "POST",
+      body: JSON.stringify({
+        ticketId: ticketId,
+        ticketName: ticketName,
+      }),
+    }).then((_res) => {
+      window.location.href = "/";
+    });
+  }
+
+  function updateTicketData(ticketId, ticketData) {
+    console.log("Test2 - index json - update2");
+    fetch("/update-ticket2", {
+      method: "POST",
+      body: JSON.stringify({
+        ticketId: ticketId,
+        ticketData: ticketData,
+      }),
+    }).then((_res) => {
+      window.location.href = "/";
+    });
+  }
+</script>
+
 {% endblock %}
