--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,20 +1,17 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
-%}
+{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content%}
+
 <h1 align="center">Tickets</h1>
+
+<!-- List element that will generate all tickets-->
 <ul class="list-group list-group-flush" id="ticket">
   {% for ticket in user.tickets %}
   <li class="list-group-item">
-    Name:
-    <cite id="editableContent{{ ticket.id }}" contenteditable="true"
-      >{{ ticket.name }} </cite
-    ><br />
-    Data:
-    <cite id="editableContent{{ ticket.id }}2" contenteditable="true">
-      {{ticket.data}} </cite
-    ><br />
-    Progress Type: {{ticket.progressType}}
-    <br />
 
+    Name:<cite id="editableContent{{ ticket.id }}" contenteditable="true">{{ ticket.name }} </cite><br />
+    Data:<cite id="editableContent{{ ticket.id }}2" contenteditable="true">{{ticket.data}} </cite><br />
+    Progress Type: {{ticket.progressType}}<br />
+
+    <!-- Listner to edit the Name and Data of this** ticket in contenteditable and send it backend DB editableContent**ticketNumber -->
     <script>
       document
         .getElementById("editableContent{{ ticket.id }}")
@@ -24,8 +21,6 @@
           updateTicketName({{ ticket.id }},content)
 
         });
-
-
         document
         .getElementById("editableContent{{ ticket.id }}2")
         .addEventListener("blur", function () {
@@ -36,13 +31,7 @@
         });
     </script>
 
-    <!-- <button
-      type="button"
-      class="btn btn-primary"
-      onClick="updateTicket({{ ticket.id}} , '{{ticket.name}}', '{{ticket.data}}')"
-    >
-      Update2 Ticket
-    </button> -->
+  <!-- Delete Button for each ticket -->
     <button type="button" class="close" onClick="deleteTicket({{ ticket.id }})">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -50,6 +39,7 @@
   {% endfor %}
 </ul>
 
+<!-- Form to add new ticket -->
 <h1 align="center">New Ticket</h1>
 <form method="POST">
   <br />
@@ -60,16 +50,17 @@
     name="ticket-progress"
     id="ticket-progress"
     class="form-control"
-    size="4"
-  >
+    size="4">
+    
     <option value="Ideation">Ideation</option>
     <option value="In-Progress">In-Progress</option>
     <option value="Complete">Complete</option>
     <option value="Hold">Hold</option>
+  
   </select>
+ <br />
 
-  <br />
-  <div align="center">
+ <div align="center">
     <button type="submit" class="btn btn-primary">Add Ticket</button>
   </div>
 </form>
