--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -83,7 +83,7 @@
           method: "POST",
           body: JSON.stringify({ ticketId: ticketId }),
         }).then((_res) => {
-          window.location.href = "/";
+          window.location.href = "/test";
         });
       }
     </script>
