--- a/website/templates/test.html
+++ b/website/templates/test.html
@@ -62,6 +62,7 @@
         {% if ticket.progressType == 'Ideation' %}
         <Div class = 'todo' draggable = "true" id ={{ ticket.id }} >       
           <li class="list-group-item">
+            <p hidden id = 'ticketIDSelector'>{{ ticket.id }}</p>
             Name:
             <cite id="editableContent{{ ticket.id }}" contenteditable="true">
               {{ ticket.name }}
@@ -110,11 +111,12 @@
 
   <!-- Generate all tickets for In-Progress-->
     <Div class="status">
-      <h1>In-Progress</h1>
+      <h1 id = 'WhereAmI' >In-Progress</h1>
       {% for ticket in user.tickets %}
         {% if ticket.progressType == 'In-Progress' %}
       <Div class = 'todo' draggable = "true">
         <li class="list-group-item">
+          <p hidden id = 'ticketIDSelector'>{{ ticket.id }}</p>
           Name:
           <cite id="editableContent{{ ticket.id }}" contenteditable="true">
             {{ ticket.name }}
@@ -161,11 +163,12 @@
 
   <!-- Generate all tickets for Complete-->
     <Div class="status">
-      <h1>Complete</h1>
+      <h1 id = 'WhereAmI'>Complete</h1>
       {% for ticket in user.tickets %}
       {% if ticket.progressType == 'Complete' %}
       <Div class = 'todo' draggable = "true">
         <li class="list-group-item" >
+          <p hidden id = 'ticketIDSelector'>{{ ticket.id }}</p>
           Name:
           <cite id="editableContent{{ ticket.id }}" contenteditable="true">
             {{ ticket.name }}
@@ -211,11 +214,12 @@
 
   <!-- Generate all tickets for Hold-->
     <Div class="status">
-      <h1>Hold</h1>
+      <h1 id = 'WhereAmI'>Hold</h1>
       {% for ticket in user.tickets %}
         {% if ticket.progressType == 'Hold' %}
       <Div class = 'todo' draggable = "true">
         <li class="list-group-item">
+          <p hidden id = 'ticketIDSelector'>{{ ticket.id }}</p>
           Name:
           <cite id="editableContent{{ ticket.id }}" contenteditable="true">
             {{ ticket.name }}
@@ -296,7 +300,7 @@ const todos = document.querySelectorAll(".todo");
 const all_status = document.querySelectorAll(".status");
 
 let draggableTodo = null;
-
+let currentDrag = null;
 
 
 todos.forEach((todo) => {
@@ -329,6 +333,9 @@ function dragOver(e){
 }
 
 function dragstart(){
+  ticketID_Element = this.querySelector('p#ticketIDSelector')
+  ticketID_Element2 = ticketID_Element.innerText
+  currentDrag = ticketID_Element2;
   draggableTodo = this;
   //console.log("dragstart");
 }
@@ -341,13 +348,16 @@ function dragend(){
 function dragDrop(){
   this.style.border = "None";
   this.appendChild(draggableTodo);
-  updateTicketStatus('1','Hold');
+  h1Element = this.querySelector('h1#WhereAmI')
   
-  console.log("drop");
+  if (h1Element) {
+    var h1Text = h1Element.innerText;
+  }
+
+  updateTicketStatus(currentDrag,h1Text);
 }
 
   function updateTicketName(ticketId, ticketName) {
-    console.log("Test - index json - update");
     fetch("/update-ticket", {
       method: "POST",
       body: JSON.stringify({
