--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,3 +1,8 @@
+<!-- 
+      ** Login Page
+      ** Page will be used to login the user and persists the login
+-->
+
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block
 content%}
 <h1>this is the Login page</h1>
