--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -1,3 +1,11 @@
+<!-- 
+      ** Sign up page
+      ** This page will be used to create accounts
+      ** Asks for Email address, First Name, Password
+      ** Has validation for email and password matching
+-->
+
+
 {% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block
 content%}
 <h1>this is the Sign-Up page</h1>
